Implemented CRUD operations.